Feature/mapper param highlighting (#1)
* feat: add mapper parameter syntax highlighting support